Added timestamp on seek bar for file sources, to allow easier comparing with source. Cleaned up leading zero on hours in title dropdown. Fixed formatting issues for video durations over 24 hours.

--- a/VidCoder/Controls/SlotSeekBar.xaml
+++ b/VidCoder/Controls/SlotSeekBar.xaml
@@ -35,8 +35,8 @@
 								<Setter Property="Background">
 									<Setter.Value>
 										<LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
-											<GradientStop Offset="0.0" Color="#6DAAED" />
-											<GradientStop Offset="1.0" Color="#3180CE" />
+											<GradientStop Offset="0.0" Color="#5689BC" />
+											<GradientStop Offset="1.0" Color="#25649E" />
 										</LinearGradientBrush>
 									</Setter.Value>
 								</Setter>
