--- a/VidCoder/View/Preview/PreviewGeneratingControls.xaml
+++ b/VidCoder/View/Preview/PreviewGeneratingControls.xaml
@@ -10,8 +10,13 @@
 	d:DesignHeight="300"
 	d:DesignWidth="300"
 	mc:Ignorable="d">
-	<StackPanel Background="{DynamicResource AlternateBackgroundBrush}" Orientation="Vertical">
+	<Grid Background="{DynamicResource AlternateBackgroundBrush}">
+		<Grid.RowDefinitions>
+			<RowDefinition Height="Auto" />
+			<RowDefinition />
+		</Grid.RowDefinitions>
 		<controls:SlotSeekBar
+			Grid.Row="0"
 			Height="24"
 			HorizontalAlignment="Stretch"
 			IsEnabled="{Binding SeekBarEnabled}"
@@ -19,7 +24,17 @@
 			                   Mode=OneWay}"
 			Slot="{Binding PreviewImageServiceClient.PreviewIndex,
 			               Mode=TwoWay}" />
-		<Grid Margin="12 8" VerticalAlignment="Center">
+		<TextBlock
+			Grid.Row="0"
+			HorizontalAlignment="Center"
+			FontSize="16"
+			FontWeight="Bold"
+			Foreground="White"
+			Text="{Binding PreviewImageServiceClient.SeekBarTimestamp}" />
+		<Grid
+			Grid.Row="1"
+			Margin="12 8"
+			VerticalAlignment="Center">
 			<Grid.ColumnDefinitions>
 				<ColumnDefinition Width="Auto" />
 				<ColumnDefinition />
@@ -46,5 +61,5 @@
 				Command="{Binding CancelPreview}"
 				Content="{x:Static res:CommonRes.Cancel}" />
 		</Grid>
-	</StackPanel>
+	</Grid>
 </UserControl>
