Updated HandBrake core. Fixed picker audio/subtitle "by index" mode not updating immediately. Simplified some code to use audio and subtitle track numbers. Updated JSON package version.

--- a/VidCoder/View/PickerWindow.xaml
+++ b/VidCoder/View/PickerWindow.xaml
@@ -492,7 +492,8 @@
 										<TextBox
 											AutomationProperties.LabeledBy="{Binding ElementName=audioIndicesLabel}"
 											Style="{StaticResource TrackIndicesStyle}"
-											Text="{Binding AudioIndices}" />
+											Text="{Binding AudioIndices,
+											               UpdateSourceTrigger=PropertyChanged}" />
 										<TextBlock Style="{StaticResource TrackIndicesHelpTextStyle}" Text="{x:Static res:PickerRes.SelectTracksHelpText}" />
 									</StackPanel>
 								</StackPanel>
@@ -696,7 +697,8 @@
 										<TextBox
 											AutomationProperties.LabeledBy="{Binding ElementName=subtitleIndicesLabel}"
 											Style="{StaticResource TrackIndicesStyle}"
-											Text="{Binding SubtitleIndices}" />
+											Text="{Binding SubtitleIndices,
+											               UpdateSourceTrigger=PropertyChanged}" />
 										<TextBlock Style="{StaticResource TrackIndicesHelpTextStyle}" Text="{x:Static res:PickerRes.SelectTracksHelpText}" />
 									</StackPanel>
 									<StackPanel Margin="0 6 0 0" Orientation="Horizontal">
