--- a/VidCoder/Themes/Light.xaml
+++ b/VidCoder/Themes/Light.xaml
@@ -1,6 +1,4 @@
-﻿<ResourceDictionary
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 	<SolidColorBrush x:Key="AlternateBackgroundBrush" Color="#F5F5F5" />
 	<SolidColorBrush x:Key="ToolBarBackgroundBrush" Color="#CCC" />
 	<SolidColorBrush x:Key="ControlTextBrush" Color="{x:Static SystemColors.ControlTextColor}" />
@@ -85,18 +83,18 @@
 	<SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#FF838383" />
 
 
-	<SolidColorBrush x:Key="OptionMark.Static.Background" Color="#FFFFFFFF"/>
-	<SolidColorBrush x:Key="OptionMark.Static.Border" Color="#FF707070"/>
-	<SolidColorBrush x:Key="OptionMark.Static.Glyph" Color="#FF212121"/>
-	<SolidColorBrush x:Key="OptionMark.MouseOver.Background" Color="#FFF3F9FF"/>
-	<SolidColorBrush x:Key="OptionMark.MouseOver.Border" Color="#FF5593FF"/>
-	<SolidColorBrush x:Key="OptionMark.MouseOver.Glyph" Color="#FF212121"/>
-	<SolidColorBrush x:Key="OptionMark.Disabled.Background" Color="#FFE6E6E6"/>
-	<SolidColorBrush x:Key="OptionMark.Disabled.Border" Color="#FFBCBCBC"/>
-	<SolidColorBrush x:Key="OptionMark.Disabled.Glyph" Color="#FF707070"/>
-	<SolidColorBrush x:Key="OptionMark.Pressed.Background" Color="#FFD9ECFF"/>
-	<SolidColorBrush x:Key="OptionMark.Pressed.Border" Color="#FF3C77DD"/>
-	<SolidColorBrush x:Key="OptionMark.Pressed.Glyph" Color="#FF212121"/>
+	<SolidColorBrush x:Key="OptionMark.Static.Background" Color="#FFFFFFFF" />
+	<SolidColorBrush x:Key="OptionMark.Static.Border" Color="#FF707070" />
+	<SolidColorBrush x:Key="OptionMark.Static.Glyph" Color="#FF212121" />
+	<SolidColorBrush x:Key="OptionMark.MouseOver.Background" Color="#FFF3F9FF" />
+	<SolidColorBrush x:Key="OptionMark.MouseOver.Border" Color="#FF5593FF" />
+	<SolidColorBrush x:Key="OptionMark.MouseOver.Glyph" Color="#FF212121" />
+	<SolidColorBrush x:Key="OptionMark.Disabled.Background" Color="#FFE6E6E6" />
+	<SolidColorBrush x:Key="OptionMark.Disabled.Border" Color="#FFBCBCBC" />
+	<SolidColorBrush x:Key="OptionMark.Disabled.Glyph" Color="#FF707070" />
+	<SolidColorBrush x:Key="OptionMark.Pressed.Background" Color="#FFD9ECFF" />
+	<SolidColorBrush x:Key="OptionMark.Pressed.Border" Color="#FF3C77DD" />
+	<SolidColorBrush x:Key="OptionMark.Pressed.Glyph" Color="#FF212121" />
 
 
 	<SolidColorBrush x:Key="RadioButton.Static.Background" Color="#FFFFFFFF" />
