--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -588,12 +588,21 @@
 									VerticalAlignment="Center"
 									Content="{x:Static res:OptionsRes.RememberPreviousFilesCheckBox}"
 									IsChecked="{Binding RememberPreviousFiles}" />
-								<CheckBox
-									Margin="0 6 0 0"
-									HorizontalAlignment="Left"
-									VerticalAlignment="Center"
-									Content="{x:Static res:OptionsRes.DeleteSourceAfterCompletionCheckBox}"
-									IsChecked="{Binding DeleteSourceFilesOnClearingCompleted}" />
+								<StackPanel Margin="0 6 0 0" Orientation="Horizontal">
+									<CheckBox
+										HorizontalAlignment="Left"
+										VerticalAlignment="Center"
+										Content="{x:Static res:OptionsRes.DeleteSourceAfterCompletionCheckBox}"
+										IsChecked="{Binding DeleteSourceFilesOnClearingCompleted}" />
+									<ComboBox
+										Margin="6 0 0 0"
+										ItemsSource="{Binding DeleteSourceFilesModeChoices}"
+										SelectedValue="{Binding SelectedDeleteSourceFilesMode,
+										                        Mode=TwoWay}"
+										SelectedValuePath="Value"
+										Visibility="{Binding DeleteSourceFilesOnClearingCompleted,
+										                     Converter={StaticResource VisibilityConverter}}" />
+								</StackPanel>
 								<CheckBox
 									Margin="0 6 0 0"
 									HorizontalAlignment="Left"
