Moved Window.TaskbarItemInfo initialization to the .xaml.cs file so it can be surrounded by a try/catch. Setting this throws an exception for some users.

--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -406,9 +406,13 @@
 			</Setter>
 		</Style>
 	</Window.Resources>
-	<Window.TaskbarItemInfo>
+	<!--
+		Working around bug where trying to set Window.TaskbarItemInfo throws an exception for some.
+		This is now done in the .xaml.cs file.
+	-->
+	<!--<Window.TaskbarItemInfo>
 		<TaskbarItemInfo ProgressState="{Binding TaskBarProgressTracker.ProgressState}" ProgressValue="{Binding TaskBarProgressTracker.ProgressFraction}" />
-	</Window.TaskbarItemInfo>
+	</Window.TaskbarItemInfo>-->
 	<Window.InputBindings>
 		<KeyBinding
 			Key="O"
