Overhauled Destination UI. Added marker to tell when the destination has been manually overridden. Added button to revert naming to automatic when in Manual mode. Added button to change naming options when in Automatic mode. Changed wording to "Destination" in Picker to be consistent with main UI.

--- a/VidCoder/View/PickerWindow.xaml
+++ b/VidCoder/View/PickerWindow.xaml
@@ -199,8 +199,11 @@
 							Margin="12"
 							VerticalAlignment="Top"
 							Orientation="Vertical">
-							<!--  Output location  -->
-							<TextBlock Style="{StaticResource ConfigSectionHeader}" Text="{x:Static res:PickerRes.OutputLocation}" />
+							<!--  Destination  -->
+							<TextBlock
+								Name="destinationSectionTitle"
+								Style="{StaticResource ConfigSectionHeader}"
+								Text="{x:Static res:PickerRes.DestinationSection}" />
 							<StackPanel Style="{StaticResource ConfigSectionStack}">
 								<Grid>
 									<Grid.ColumnDefinitions>
