--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -2005,21 +2005,23 @@
 						<ColumnDefinition Width="Auto" />
 						<ColumnDefinition />
 						<ColumnDefinition Width="Auto" />
+						<ColumnDefinition Width="Auto" />
 					</Grid.ColumnDefinitions>
 					<TextBlock
 						Height="19"
-						Margin="12 8 0 8"
+						Margin="8 4 0 4"
 						HorizontalAlignment="Left"
 						VerticalAlignment="Center"
 						Style="{StaticResource MainSectionHeader}"
 						Text="{x:Static res:MainRes.DestinationLabel}" />
 					<Grid
 						Grid.Column="1"
-						Height="22"
-						Margin="6 8 6 8"
+						Height="30"
+						Margin="6 0 0 0"
 						VerticalAlignment="Center">
 						<TextBox
 							Name="destinationEditBox"
+							Padding="4 0 4 0"
 							VerticalContentAlignment="Center"
 							GotFocus="DestinationEditBoxGotFocus"
 							LostFocus="DestinationEditBoxLostFocus"
@@ -2049,16 +2051,40 @@
 					<Button
 						Name="outputPathBrowseButton"
 						Grid.Column="2"
-						Height="22"
-						Margin="0 8 12 8"
-						Padding="5 0"
-						HorizontalAlignment="Right"
+						Height="30"
+						Margin="0"
+						Padding="8 0"
 						VerticalAlignment="Center"
 						Command="{Binding OutputPathService.PickOutputPath}"
-						Visibility="{Binding OutputPathService.OutputFolderChosen,
-						                     Converter={StaticResource VisibilityConverter}}">
-						<TextBlock Text="{x:Static res:CommonRes.Browse}" />
-					</Button>
+						Content="{x:Static res:CommonRes.Browse}"
+						Style="{StaticResource BorderlessButtonStyle}" />
+
+					<Button
+						Grid.Column="3"
+						Height="30"
+						MinWidth="75"
+						Margin="0"
+						Padding="8 0"
+						VerticalAlignment="Center"
+						Command="{Binding OutputPathService.ChangeToAutomatic}"
+						Content="{x:Static res:CommonRes.Manual}"
+						Style="{StaticResource BorderlessButtonStyle}"
+						ToolTip="{x:Static res:MainRes.DestinationManualToolTip}"
+						Visibility="{Binding OutputPathService.ManualOutputPath,
+						                     Converter={StaticResource VisibilityConverter}}" />
+					<Button
+						Grid.Column="3"
+						Height="30"
+						MinWidth="75"
+						Margin="0"
+						Padding="8 0"
+						VerticalAlignment="Center"
+						Command="{Binding OutputPathService.OpenPickerToDestination}"
+						Content="{x:Static res:CommonRes.Automatic}"
+						Style="{StaticResource BorderlessButtonStyle}"
+						ToolTip="{x:Static res:MainRes.DestinationAutomaticToolTip}"
+						Visibility="{Binding OutputPathService.ManualOutputPath,
+						                     Converter={StaticResource InverseVisibilityConverter}}" />
 				</Grid>
 
 				<!--  Queue section  -->
